# HamHawk

./: .gitignore  DESIGN.md  README.md  USER_MANUAL.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/csrc/: hh_ft8.c  hh_ft8.h
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  main.rs  model.rs  orchestrator.rs
src-tauri/src/asr/: mod.rs  whisper.rs
src-tauri/src/audio/: adpcm.rs  mod.rs  resample.rs  segment.rs  spectrum.rs  vad.rs
src-tauri/src/digital/: cw.rs  ft8.rs  mod.rs  psk_rtty.rs
src-tauri/src/source/: feed.rs  kiwisdr.rs  mod.rs  openwebrx.rs
src-tauri/src/store/: db.rs  mod.rs  schema.sql
src/components/: AddReceiverModal.tsx  AudioScope.tsx  BestPicker.tsx  CommandPalette.tsx  EditMemoryModal.tsx  LeftBands.tsx  ReceiverList.tsx  Rig.tsx  SMeterArc.tsx  SettingsModal.tsx  SettingsPanel.tsx  SpectrumTrace.tsx  TelemetryDisplay.tsx  TranscriptPanel.tsx  Waterfall.tsx  WorldMap.tsx
src/lib/: audioPlayer.ts  bands.ts  bus.ts  colormap.ts  format.test.ts  format.ts  kiwicatalog.test.ts  kiwicatalog.ts  maidenhead.test.ts  maidenhead.ts  theme.ts  worldcountries.ts  worldland.ts
src/state/: store.ts
supplywatch/: docker-compose.yml  drizzle.config.ts  env.example  package.json  tsconfig.worker.json
supplywatch/src/db/: chokepoints.ts  client.ts  schema.ts  seed.ts
supplywatch/worker/: ais.ts  geofence.ts  snapshots.ts  types.ts
