[package]
name = "hamhawk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hamhawk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
whisper-rs = "0.12"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
rubato = "0.16"
rustfft = "6"
hound = "3"
base64 = "0.22"
dirs-next = "2"
chrono = { version = "0.4", features = ["serde"] }

# Pin transitive deps to dodge the known time/cookie E0119 conflict on recent rustc.
time = ">=0.3.20, <0.3.37"
cookie = ">=0.18, <0.18.1"

[profile.release]
opt-level = 3
lto = true
